package ch.timo.f1;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class F1M226bApplication {

	public static void main(String[] args) {
		SpringApplication.run(F1M226bApplication.class, args);
	}

}
